--- a/sass/layout/_sidebar.module.scss
+++ b/sass/layout/_sidebar.module.scss
@@ -7,6 +7,8 @@
   margin: 0;
   display: flex;
   justify-content: center;
+  transition: all 0.5s ease-in-out;
+  position: fixed;
 }
 
 .sidebarContainer {
@@ -26,15 +28,9 @@
 
 .sidebarCollapsed {
   @extend %sidebar;
-  position: fixed;
   right: -25%;
-  transform: translateX(100%);
-  transition: all 1s ease-in-out;
 }
 .sidebarExpanded {
   @extend %sidebar;
-  position: fixed;
-  right: -25%;
-  transform: translateX(-100%);
-  transition: all 1s ease-in-out;
+  right: 0;
 }
